[gd_scene load_steps=7 format=3 uid="uid://dk23nslyve0td"]

[ext_resource type="Script" path="res://scripts/StartingDisplay.gd" id="1_k5qrb"]
[ext_resource type="Texture2D" uid="uid://citha7sftj4o6" path="res://assets/ui-items/memory.png" id="1_vw6fi"]
[ext_resource type="Texture2D" uid="uid://bsdfuc0emmevg" path="res://assets/ui-items/play.png" id="2_8lenh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh6po"]
bg_color = Color(0.122539, 0.311284, 0.444509, 1)

[sub_resource type="FontFile" id="FontFile_1tlx3"]
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/42/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="GDScript" id="GDScript_4rj5a"]
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="StartingDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_k5qrb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.992157, 0.992157, 0.992157, 1)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -60.0
offset_right = -3.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ColorRect/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sh6po")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -302.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ColorRect/CenterContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("1_vw6fi")
stretch_mode = 3

[node name="playLabel" type="Label" parent="ColorRect/CenterContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -347.0
offset_top = -630.0
offset_right = 343.0
offset_bottom = -587.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_1tlx3")
theme_override_font_sizes/font_size = 42
text = "Find matching pairs to win this game!"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -243.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="chooseTheme" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Choose Theme:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="themeOption" type="OptionButton" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="playBtn" type="TextureButton" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("2_8lenh")
stretch_mode = 3
script = SubResource("GDScript_4rj5a")

[connection signal="item_selected" from="ColorRect/VBoxContainer/HBoxContainer/themeOption" to="." method="_on_theme_option_item_selected"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/playBtn" to="." method="_on_play_btn_pressed"]
